# demos

./: .gitignore  CHANGELOG.md  README.md  todo
.github/workflows/: ci.yml  release.yml  sample-plugin.yaml  simple-storage-web3api.yaml
client-threads/: README.md  package.json  tsconfig.json
client-threads/src/: ClientThread.ts  messages.ts  thread.ts
common-interface/: README.md
common-interface/interface/: package.json  polywrap.yaml  schema.graphql
common-interface/wrapper-b/: package.json
datetime-plugin/plugin/: README.md  package.json  polywrap.plugin.yaml
datetime-plugin/wrapper/: .gitignore  README.md  package.json  polywrap.yaml  tsconfig.json  tsconfig.ts.json  web3api.yaml
examples/: README.md
examples/vercel-polywrap-nextjs/: package.json
fetch-metadata/: README.md  package.json
fetch-metadata/public/: index.html
fetch-metadata/src/: App.css  App.tsx  index.css
hello-world/: README.md
hello-world/app/: package.json
hello-world/dapp/: README.md  package.json
hello-world/web3api/: .gitignore  README.md  package.json  web3api.yaml
hello-world/wrapper/: package.json
hello-world/wrapper/rust/: Cargo.toml  jest.config.js  package.json  polywrap.build.yaml  polywrap.meta.yaml  polywrap.yaml  schema.graphql
hello-world/wrapper/rust/src/: lib.rs
hello-world/wrapper/rust/workflows/: e2e.yaml
implementation-registry/dapp/: .env  package.json
implementation-registry/implementation1/: web3api.yaml
implementation-registry/implementation2/: package.json
implementations-registry/dapp/: .env  package.json
json-rpc/: README.md
json-rpc/wrapper/rust/: .gitignore  Cargo.toml  package.json  polywrap.build.yaml  polywrap.meta.yaml  polywrap.yaml  tsconfig.json
json-rpc/wrapper/rust/src/: lib.rs  schema.graphql  utils.rs
json-rpc/wrapper/rust/src/__tests__/e2e/: integration.spec.ts
json-rpc/wrapper/rust/workflows/: e2e.json  e2e.yaml  output.json  validator.cue
old/client-threads/: .gitignore  README.md  package.json  tsconfig.thread.json  webpack.config.js
old/fetch-metadata/: README.md  (+1 more)
rust-async-support/: Cargo.toml  README.md  package.json  polywrap.build.yaml  polywrap.yaml  schema.graphql
rust-async-support/src/: lib.rs  queue.rs
rust-async-support/tests/: e2e.spec.ts
sample-plugin/: README.md  package.json
signer-provider/: README.md  package.json  polywrap.app.yaml  polywrap.yaml  schema.graphql  tsconfig.json  webpack.config.js
simple-storage/: README.md
subgraph-query/: README.md
subgraph-query/wrapper/rust/: Cargo.toml  package.json  polywrap.build.yaml  polywrap.meta.yaml  polywrap.yaml  schema.graphql  tsconfig.build.json
subgraph-query/wrapper/rust/src/: lib.rs
subgraph-query/wrapper/rust/src/__tests__/e2e/: integration.spec.ts
subgraph-query/wrapper/rust/src/__tests__/types/: polywrap.app.yaml
subgraph-query/wrapper/rust/workflows/: e2e.yaml  validator.cue
terra-dapp/: README.md  package.json
tracing/: README.md  package.json
(+388 files in other folders)
