[package]
name = "module"
version = "0.1.0"
description = ""
authors = []
repository = ""
license = "MIT"
edition = "2021"

[dependencies]
js-sys = "0.3.60"
polywrap-wasm-rs = "0.7.0"
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen = "0.2.83"
wasm-bindgen-futures = "0.4.33"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 'z'
lto = true
panic = 'abort'
