[package]
name = "module"
version = "0.1.0"
description = ""
authors = []
repository = ""
license = "MIT"
edition = "2021"

[dependencies]
polywrap-wasm-rs = "0.7.0"
serde = { version = "1.0", features = ["derive"] }

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 'z'
lto = true
panic = 'abort'
