[package]
name = "hello-world"
version = "0.1.0"
description = "Hello world wrapper"
repository = "https://github.com/polywrap/demos"
license = "MIT"
edition = "2021"

[dependencies]
polywrap-wasm-rs = { version = "0.10.0" }
serde = { version = "1.0", features = ["derive"] }

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 's'
lto = true
panic = 'abort'