[package]
name = "subgraph-query"
version = "0.1.0"
description = "Subgraph query"
authors = [
  "Kobby Pentangeli <kobbypentangeli@gmail.com>",
  "Jordan Ellis <jelli@dorg.tech>"
]
repository = "https://github.com/polywrap/monorepo"
license = "MIT"
edition = "2021"

[dependencies]
polywrap-wasm-rs = { version = "0.5.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"]}

[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = 's'
lto = true
panic = 'abort'
